kubernetes/apps/databases/cloudnative-pg/cluster/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-lb
  annotations:
    external-dns.alpha.kubernetes.io/hostname: postgres.bth.wtf
    lbipam.cilium.io/ips: 192.168.35.11
spec:
  type: LoadBalancer
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    cnpg.io/cluster: postgres17
    cnpg.io/instanceRole: primary
