kubernetes/apps/databases/cloudnative-pg/cluster/tlsroute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tlsroute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: postgres-external
  namespace: databases
  annotations: {}
spec:
  parentRefs:
    - name: traefik-external-gateway
      namespace: network
      sectionName: postgres-tls
  hostnames:
    - pg.68cc.io
  rules:
    - backendRefs:
        - name: postgres17-rw
          port: 5432
